# pdfexcavator

./: Cargo.toml  README.md
pdf_internals/: Cargo.toml
pdf_internals/src/: lib.rs
